--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=Nikola241204
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-server.port=8081
-#flyway.url=jdbc:postgresql://localhost:5432/bookstore
-#flyway.username=postgres
-#flyway.password=Nikola241204
-#spring.flyway.locations=classpath:db/migration
+#server.port=8081
+flyway.url=jdbc:postgresql://localhost:5432/bookstore
+flyway.username=postgres
+flyway.password=Nikola241204
