--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
-spring.datasource.username=postgres
-spring.datasource.password=Nikola241204
+dbUrl=jdbc:postgresql://localhost:5432/bookstore
+username=postgres
+password=Nikola241204
+spring.datasource.url=${dbUrl}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 #server.port=8081
-flyway.url=jdbc:postgresql://localhost:5432/bookstore
-flyway.username=postgres
-flyway.password=Nikola241204
+flyway.url=${dbUrl}
+flyway.username=${username}
+flyway.password=${password}
