--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 dbUrl=jdbc:postgresql://localhost:5432/bookstore
-username=postgres
-password=Nikola241204
+user=postgres
+pass=1234
 spring.datasource.url=${dbUrl}
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.username=${user}
+spring.datasource.password=${pass}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 #server.port=8081
 flyway.url=${dbUrl}
-flyway.username=${username}
-flyway.password=${password}
+flyway.username=${user}
+flyway.password=${pass}
